--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "goit-nodejs-homework-1",
+  "name": "goit-node-homework-1",
   "version": "1.0.0",
-  "description": "HW1 node.js",
+  "description": "hw#01 node.js",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,10 +11,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
   "dependencies": {
-    "commander": "^11.1.0",
-    "nanoid": "^5.0.2",
-    "nodemon": "^3.0.1",
+    "commander": "^11.0.0",
+    "nanoid": "^3.3.4",
     "yargs": "^17.7.2"
   }
 }
